# osquery-extension

./: BUILD.bazel  README.md  main.go
tables/cfgutil/: BUILD.bazel  cfgutil.go  cfgutil_get.go  cfgutil_list.go  cfgutil_test.go  json.go
tables/tetherator/: BUILD.bazel  tetherator.go  tetherator_roster.go  tetherator_status.go  tetherator_test.go
